# ethermail-client

./: .envsample  .gitignore  README.md  main.py  pyproject.toml  run.py
core/: api_client.py  config.py  dependencies.py  ip.py  logging_config.py  schemas.py  task_manager.py
core/alembic/: env.py
core/alembic/versions/: 7c5a885480a7_initial_migration.py  f5f729eebea1_add_field_mnemonic.py
core/database/: connect.py  models.py
core/routes/: ether.py
