[tool.poetry]
name = "ethermail-client"
version = "0.1.0"
description = ""
authors = ["hachimaru <74972395+xxspell@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.4"
fake-useragent = "^1.5.1"
tenacity = "^9.0.0"
python-multipart = "^0.0.17"
web3 = "^7.4.0"
aiohttp = "^3.10.10"
uvicorn = "^0.32.0"
loguru = "^0.7.2"
alembic = "^1.13.3"
aiosqlite = "^0.20.0"
httpx = {extras = ["socks"], version = "^0.27.2"}
eth-account = "^0.13.4"
mnemonic = "^0.21"
pyjwt = "^2.9.0"
psutil = "^6.1.0"
pydantic-settings = "^2.6.1"
browserforge = {extras = ["all"], version = "^1.1.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
